fixed more button stretching and header positioning

--- a/public/css/home-page.css
+++ b/public/css/home-page.css
@@ -14,7 +14,7 @@ p{
 }
 
 .btn-info{
-    font-size:150%;
+    font-size:2vw;
 }
 
 .image-gpu{
